# pyazureutils

./: CHANGELOG.md  MANIFEST.in  README.md  pypi.md  pyproject.toml  requirements.txt  setup.py
doc/source/: conf.py  index.rst  pyazureutils.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  pyazureutils.html  search.html  searchindex.js
docs/_sources/: pyazureutils.rst.txt
